syntax = "proto3";

option csharp_namespace = "ClientTwo";

package greet;
service Greeter{
	rpc SendPlayerMessage (stream PlayerChatInfoRequest) returns (stream PlayerChatInfoResponse);
	rpc SendPlayerGameData (stream PlayerGameDataRequest) returns (stream PlayerGameDataResponse);
	rpc SendPlayerInfoData (stream PlayerInfoRequest) returns (stream PlayerInfoResponse);
}

message PlayerChatInfoRequest {
  string ClientId = 1;
  string Message = 2;
  string ClientIdToSend = 3;
  bool FirstTime = 5;
}

message PlayerChatInfoResponse {
  string Message = 2;
}

message PlayerGameDataRequest{
	string Position = 1;
	string Text = 2;
	bool ClientPlayed = 3;
    string ClientId = 4;
	string ClientIdToSend = 5;
	bool FirstTime = 6;
}

message PlayerGameDataResponse{
	string Position = 1;
	string Text = 2;
	bool ClientPlayed = 3;
}

message PlayerInfoRequest{
	string Nickname = 1;
	string ChosenSymbol = 2;
	string ClientId = 3;
	string ClientIdToSend = 4;
	bool FirstTime = 5;
}

message PlayerInfoResponse{
	string Nickname = 1;
	string ChosenSymbol = 2;
}